--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
     <version>4.12</version>
     <scope>test</scope>
 </dependency>
+ <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>2.48.2</version>
+</dependency>  
 
   </dependencies>
 </project>
